{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 52,
  "lineage": "f81cc896-e57f-e820-c052-4a4a8c3af07e",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:internet-gateway/igw-0cf5e82092b2544e1",
            "id": "igw-0cf5e82092b2544e1",
            "owner_id": "018751003213",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-igw",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-igw",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "vpc_id": "vpc-0a093660365634aa1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:route-table/rtb-03e10c84cfcc0719b",
            "id": "rtb-03e10c84cfcc0719b",
            "owner_id": "018751003213",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-rt-priv-a",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-rt-priv-a",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a093660365634aa1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_a",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.nat_a",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:route-table/rtb-0cf9d765075d0c1e0",
            "id": "rtb-0cf9d765075d0c1e0",
            "owner_id": "018751003213",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cf5e82092b2544e1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-rt-public",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-rt-public",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a093660365634aa1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08427f3fffa8241f4",
            "route_table_id": "rtb-03e10c84cfcc0719b",
            "subnet_id": "subnet-0529fc76823488e0b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_a",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.nat_a",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f908466957bdb19",
            "route_table_id": "rtb-0cf9d765075d0c1e0",
            "subnet_id": "subnet-03be79b5e10e384b6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "crop_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:security-group/sg-08a84f688fedef180",
            "description": "SG crop Lambda - outbound HTTPS to S3 and SQS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS salida (S3 Gateway Endpoint y SQS)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-08a84f688fedef180",
            "ingress": [],
            "name": "image-processor-dev-sg-crop-lambda",
            "name_prefix": "",
            "owner_id": "018751003213",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-sg-crop-lambda",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-sg-crop-lambda",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a093660365634aa1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "upload_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:security-group/sg-055f402a97adac506",
            "description": "SG upload Lambda - outbound HTTPS to S3 and SQS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS salida (S3 Gateway Endpoint y SQS)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-055f402a97adac506",
            "ingress": [],
            "name": "image-processor-dev-sg-upload-lambda",
            "name_prefix": "",
            "owner_id": "018751003213",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-sg-upload-lambda",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-sg-upload-lambda",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a093660365634aa1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:subnet/subnet-0529fc76823488e0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0529fc76823488e0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "018751003213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-priv-a",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-priv-a",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "vpc_id": "vpc-0a093660365634aa1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:subnet/subnet-03be79b5e10e384b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03be79b5e10e384b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "018751003213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-pub-a",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-pub-a",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "vpc_id": "vpc-0a093660365634aa1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:vpc/vpc-0a093660365634aa1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cb8c1c96baa0c77c",
            "default_route_table_id": "rtb-0d29302c9f25d0b5d",
            "default_security_group_id": "sg-0fcff77e21312b154",
            "dhcp_options_id": "dopt-070d0ce1c9f89a1fc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a093660365634aa1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d29302c9f25d0b5d",
            "owner_id": "018751003213",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-vpc",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-vpc",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:vpc-endpoint/vpce-0c717ccd8fb5a832a",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c717ccd8fb5a832a",
            "ip_address_type": "ipv4",
            "owner_id": "018751003213",
            "policy": "{\"Statement\":[{\"Action\":[\"s3:GetObject\",\"s3:PutObject\"],\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"arn:aws:s3:::image-processor-dev-images-001/*\"}],\"Version\":\"2012-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-03e10c84cfcc0719b",
              "rtb-0cf9d765075d0c1e0"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-vpce-s3",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-vpce-s3",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0a093660365634aa1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_a",
            "module.vpc.aws_eip.nat_b",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.nat_a",
            "module.vpc.aws_nat_gateway.nat_b",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_route_table.private_b",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}